SearchIPCRouter: Invalidate cached connection ID on renderer crash

BUG=683021

Review-Url: https://codereview.chromium.org/2677013004
Cr-Commit-Position: refs/heads/master@{#448519}

Former-commit-id: 3c36d59b4bd011c2bbbf28d59275aa082ede1ff5